robot  Ajoute: fi Modifie: en, es

--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -129,8 +129,8 @@ Comment améliorer un article sur une langue?
                                                                                  
 [[Category:Lokótá]]
 
-
-[[fr:tchiluba]]
-[[en:tshiluba]]
-[[es:Tshiluba]]
+[[en:Tshiluba language]]
+[[es:Idioma tshiluba]]
+[[fi:Luban kieli]]
+[[fr:Tchiluba]]
 [[ko:루바어]]
