robot  Ajoute: en

--- a/Bacillus_Calmette-Guérin.mw
+++ b/Bacillus_Calmette-Guérin.mw
@@ -61,12 +61,12 @@ te, okokiko betela:
 * midwife / femme sage (THIS IS ENGLISH/FRENCH, PLEASE TRANSLATE IF YOU CAN)
 * nurse / infirmière (THIS IS ENGLISH/FRENCH, PLEASE TRANSLATE IF YOU CAN)
 
-
 [[de:Bacillus Calmette-Guérin]]
+[[en:Bacillus Calmette-Guérin]]
 [[es:BCG]]
-[[fr:Bacille de Calmette et Guérin]]
-[[nl:BCG-vaccin]]
-[[ja:BCG]]
-[[pl:BCG]]
 [[fi:BCG-rokote]]
+[[fr:Bacille de Calmette et Guérin]]
+[[ja:BCG]]
+[[nl:BCG-vaccin]]
+[[pl:BCG]]
 [[zh:卡介苗]]
