robot  Ajoute: ar, bs, cs, da, eu, fi, gl, he, hr, id, it, ja, ms, nl, nn, no, pl, pt, ru, simple, sk, sl, sr, sv, th, tr, uk, zh

--- a/Dísiki-ebómbelo_ekɛ́.mw
+++ b/Dísiki-ebómbelo_ekɛ́.mw
@@ -4,7 +4,36 @@
 
 
 [[category:Bongana masíni]]
-[[fr:disquette]]
+
+[[ar:قرص مرن]]
+[[bs:Flopi disk]]
+[[cs:Disketa]]
+[[da:Diskette]]
 [[de:Diskette]]
 [[en:Floppy disk]]
 [[es:Disco flexible]]
+[[eu:Diskete]]
+[[fi:Levyke]]
+[[fr:Disquette]]
+[[gl:Disquete]]
+[[he:תקליטון]]
+[[hr:Disketa]]
+[[id:Disket]]
+[[it:Floppy disk]]
+[[ja:フロッピーディスク]]
+[[ms:Cakera liut]]
+[[nl:Diskette]]
+[[nn:Diskett]]
+[[no:Diskett]]
+[[pl:Dyskietka]]
+[[pt:Disquete]]
+[[ru:Дискета]]
+[[simple:Floppy disk]]
+[[sk:Disketa]]
+[[sl:Disketa]]
+[[sr:Дискета]]
+[[sv:Diskett]]
+[[th:ฟลอปปีดิสก์]]
+[[tr:Disket]]
+[[uk:Дискета]]
+[[zh:软盘]]
