robot  Ajoute: ar, br, bs, cs, da, de, en, eo, es, et, fa, fi, gl, he, hr, id, it, ja, ko, nl, no, pl, pt, ro, ru, simple, sl, sr, sv, th, uk, zh

--- a/Ebimiselo.mw
+++ b/Ebimiselo.mw
@@ -1,4 +1,37 @@
 [[Image:Apple Color LaserWriter 12-600 PS.jpg|thumb|*]]
 {{ndámbo}}
 [[category:Bongana masíni]]
+
+[[ar:طابعة]]
+[[br:Moullerez]]
+[[bs:Printer]]
+[[cs:Tiskárna (počítačová)]]
+[[da:Printer]]
+[[de:Drucker (Peripheriegerät)]]
+[[en:Computer printer]]
+[[eo:Printilo]]
+[[es:Impresora]]
+[[et:Printer]]
+[[fa:چاپگر]]
+[[fi:Tulostin]]
 [[fr:Imprimante]]
+[[gl:Impresora]]
+[[he:מדפסת]]
+[[hr:Pisač]]
+[[id:Printer]]
+[[it:Stampante]]
+[[ja:プリンター]]
+[[ko:프린터]]
+[[nl:Printer]]
+[[no:Skriver]]
+[[pl:Drukarka]]
+[[pt:Impressora]]
+[[ro:Imprimantă]]
+[[ru:Принтер]]
+[[simple:Printer]]
+[[sl:Tiskalnik]]
+[[sr:Штампач]]
+[[sv:Skrivare]]
+[[th:เครื่องพิมพ์]]
+[[uk:Принтер]]
+[[zh:打印机]]
