robot  Ajoute: ar, bg, br, bs, ca, cs, da, es, et, fa, fi, fy, gl, he, hr, hu, ia, id, it, ja, ko, lt, lv, ms, nds, nl, nn, no, pl, pt, ro, ru, sh, simple, sk, sl, sr, sv, th, tr, uk, vi, yi, zh

--- a/Diski_ebómbelo_enéne.mw
+++ b/Diski_ebómbelo_enéne.mw
@@ -4,6 +4,51 @@
 {{ndámbo}}
 
 [[category:Bongana masíni]]
-[[fr:disque dur]]
+
+[[ar:قرص صلب]]
+[[bg:Твърд диск]]
+[[br:Disk kaled]]
+[[bs:Hard disk]]
+[[ca:Disc dur]]
+[[cs:Pevný disk]]
+[[da:Harddisk]]
 [[de:Festplatte]]
 [[en:Hard disk]]
+[[es:Disco duro]]
+[[et:Kõvaketas]]
+[[fa:دیسک سخت]]
+[[fi:Kiintolevy]]
+[[fr:Disque dur]]
+[[fy:Fêste skiif]]
+[[gl:Disco ríxido]]
+[[he:דיסק קשיח]]
+[[hr:Tvrdi disk]]
+[[hu:Merevlemez]]
+[[ia:Disco duro]]
+[[id:Hard disk]]
+[[it:Hard disk]]
+[[ja:ハードディスクドライブ]]
+[[ko:하드 디스크]]
+[[lt:Kietasis diskas]]
+[[lv:Cietais disks]]
+[[ms:Cakera keras]]
+[[nds:Fastplaat]]
+[[nl:Harde schijf]]
+[[nn:Platelager]]
+[[no:Platelager]]
+[[pl:Twardy dysk]]
+[[pt:Disco rígido]]
+[[ro:Hard-disc]]
+[[ru:Жёсткий диск]]
+[[sh:Tvrdi disk]]
+[[simple:Hard disk]]
+[[sk:Pevný disk]]
+[[sl:Trdi disk]]
+[[sr:Тврди диск]]
+[[sv:Hårddisk]]
+[[th:ฮาร์ดดิสก์]]
+[[tr:Sabit disk]]
+[[uk:Вінчестер (диск)]]
+[[vi:Ổ cứng]]
+[[yi:ארטדיסק]]
+[[zh:硬盘]]
