robot  Ajoute: de, mk, no, simple, vi, zh Modifie: it

--- a/Kapɔ́ti.mw
+++ b/Kapɔ́ti.mw
@@ -21,6 +21,7 @@ Ebateli moko okolata yango kaka mbala moko. Tanga malamu mpe landa mibeko mpo ya
 
 [[cs:Kondom]]
 [[da:Kondom]]
+[[de:Kondom]]
 [[en:Condom]]
 [[eo:Kondomo]]
 [[es:Preservativo]]
@@ -29,13 +30,18 @@ Ebateli moko okolata yango kaka mbala moko. Tanga malamu mpe landa mibeko mpo ya
 [[fr:Préservatif]]
 [[he:קונדום]]
 [[id:Kondom]]
-[[it:Preservativo]]
+[[it:Profilattico]]
 [[ja:コンドーム]]
 [[ko:콘돔]]
 [[lt:Prezervatyvas]]
+[[mk:Кондом]]
 [[ms:Kondom]]
 [[nl:Condoom]]
+[[no:Kondom]]
 [[pl:Prezerwatywa]]
 [[pt:Preservativo]]
 [[ru:Презерватив]]
+[[simple:Condom]]
 [[sv:Kondom]]
+[[vi:Bao cao su]]
+[[zh:避孕套]]
