robot  Ajoute: cs, fi, fr, ru, simple

--- a/Fɛ́fɛlɛ.mw
+++ b/Fɛ́fɛlɛ.mw
@@ -6,11 +6,14 @@
 
 [[Category:Maladi]]
 
+[[cs:Horečka]]
 [[da:Feber]]
 [[de:Fieber]]
 [[en:Fever]]
 [[es:Fiebre]]
 [[eu:Sukar]]
+[[fi:Kuume]]
+[[fr:Fièvre]]
 [[he:חום (תסמין למחלה)]]
 [[io:Febro]]
 [[it:Febbre]]
@@ -20,4 +23,6 @@
 [[no:Feber]]
 [[pl:Gorączka]]
 [[pt:Febre]]
+[[ru:Лихорадка]]
+[[simple:Fever]]
 [[sv:Feber]]
