robot  Ajoute: en, et, fi, ja, ko, lt, nl, pl Modifie: fr

--- a/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
+++ b/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
@@ -30,9 +30,17 @@
 [[Category:Bɛndɛ́lɛ ya bisé|Kɔ́ngɔ Demokratiki, Repubiliki ya]]
 
 [[de:Flagge der Demokratischen Republik Kongo]]
+[[en:Flag of the Democratic Republic of the Congo]]
 [[es:Bandera de la República Democrática del Congo]]
+[[et:Kongo DV lipp]]
+[[fi:Kongon demokraattisen tasavallan lippu]]
+[[fr:Drapeau de la République démocratique du Congo]]
 [[he:דגל הרפובליקה הדמוקרטית של קונגו]]
 [[it:Bandiera della Repubblica Democratica del Congo]]
-[[sv:Demokratiska republiken Kongos flagga]]
-[[fr:Drapeau de la Republique Democratique du Congo]]
+[[ja:コンゴ民主共和国の国旗]]
+[[ko:콩고 민주 공화국의 국기]]
+[[lt:Kongo Demokratinės Respublikos vėliava]]
+[[nl:Vlag van de Democratische Republiek Congo]]
+[[pl:Flaga Demokratycznej Republiki Konga]]
 [[pt:Bandeira da República Democrática do Congo]]
+[[sv:Demokratiska republiken Kongos flagga]]
