robot  Ajoute: de

--- a/Kasai_ya_Límbe.mw
+++ b/Kasai_ya_Límbe.mw
@@ -6,6 +6,7 @@
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bitúká bya Kɔ́ngɔ-Kinshasa]]
 
+[[de:Kasai-Occidental]]
 [[en:Kasai-Occidental]]
 [[fr:Kasaï-Occidental]]
 [[sv:Kasai-Occidental]]
