robot  Ajoute: eu, gl, hu, id, is, lb, lt, nds, nn, pl, ro, ru, sk, sl, sr, tr, vi, zh

--- a/Bozinga.mw
+++ b/Bozinga.mw
@@ -2,6 +2,43 @@
 
 <div style="height:3cm;background-color:#00f;margin-left:2cm;margin-right:2cm"> </div>
 
-[[af:Blou (kleur)]] [[ca:Blau]] [[cs:Modrá]] [[da:Blå]] [[de:Blau]] [[el:Μπλέ]] [[en:Blue]] [[es:Azul]] [[eo:Blua]] [[fr:Bleu]] [[it:Blu]] [[he:כחול]] [[ms:Biru]] [[nl:Blauw]] [[ja:青]] [[no:Blå]] [[pt:Azul]] [[simple:Blue]] [[fi:Sininen]] [[sv:Blå]]
-
 [[Category:lángi]]
+
+[[af:Blou (kleur)]]
+[[ca:Blau]]
+[[cs:Modrá]]
+[[da:Blå]]
+[[de:Blau]]
+[[el:Μπλέ]]
+[[en:Blue]]
+[[eo:Blua]]
+[[es:Azul]]
+[[eu:Urdin]]
+[[fi:Sininen]]
+[[fr:Bleu]]
+[[gl:Azul]]
+[[he:כחול]]
+[[hu:Kék]]
+[[id:Biru]]
+[[is:Blár]]
+[[it:Blu]]
+[[ja:青]]
+[[lb:Blo]]
+[[lt:Mėlyna]]
+[[ms:Biru]]
+[[nds:Blau]]
+[[nl:Blauw]]
+[[nn:Blå]]
+[[no:Blå]]
+[[pl:Barwa niebieska]]
+[[pt:Azul]]
+[[ro:Albastru]]
+[[ru:Синий цвет]]
+[[simple:Blue]]
+[[sk:Modrá]]
+[[sl:Modra]]
+[[sr:Плава боја]]
+[[sv:Blå]]
+[[tr:Mavi]]
+[[vi:Xanh lam]]
+[[zh:藍色]]
