robot  Ajoute: bg, eu, fr, ht, hu, ku, tr

--- a/Ekólo_Wali.mw
+++ b/Ekólo_Wali.mw
@@ -2,8 +2,8 @@
 {{UK}}
 [[category:Ingɛlɛ́tɛlɛ]]
 
-
 [[als:Wales]]
+[[bg:Уелс]]
 [[ca:Gal·les]]
 [[cs:Wales]]
 [[cy:Cymru]]
@@ -13,16 +13,21 @@
 [[eo:Kimrio]]
 [[es:Gales]]
 [[et:Wales]]
+[[eu:Gales]]
 [[fi:Wales]]
+[[fr:Pays de Galles]]
 [[ga:An Bhreatain Bheag]]
 [[gd:A'Chuimrigh]]
 [[gl:Gales - Cymru]]
 [[he:ויילס]]
+[[ht:Gal]]
+[[hu:Wales]]
 [[id:Wales]]
 [[it:Galles]]
 [[ja:ウェールズ]]
 [[ka:უელსი]]
 [[ko:웨일스]]
+[[ku:Wales]]
 [[kw:Kembra]]
 [[la:Cambria]]
 [[lt:Velsas]]
@@ -43,5 +48,6 @@
 [[sr:Велс]]
 [[sv:Wales]]
 [[th:เวลส์]]
+[[tr:Galler]]
 [[zh:威爾士]]
 [[zh-min-nan:Cymru]]
