robot  Ajoute: af, ar, ast, ca, el, eu, fr, hu, la, lt, tpi, tr, uk

--- a/Irlandí_ya_Nola.mw
+++ b/Irlandí_ya_Nola.mw
@@ -2,24 +2,34 @@
 {{UK}}
 [[category:Ingɛlɛ́tɛlɛ]]
 
+[[af:Noord-Ierland]]
+[[ar:أيرلندا الشمالية]]
+[[ast:Irlanda del Norte]]
+[[ca:Irlanda del Nord]]
 [[cs:Severní Irsko]]
 [[cy:Gogledd Iwerddon]]
 [[da:Nordirland]]
 [[de:Nordirland]]
+[[el:Βόρεια Ιρλανδία]]
 [[en:Northern Ireland]]
 [[eo:Nord-Irlando]]
 [[es:Irlanda del Norte]]
 [[et:Põhja-Iirimaa]]
+[[eu:Ipar Irlanda]]
 [[fi:Pohjois-Irlanti]]
+[[fr:Irlande du Nord]]
 [[ga:Tuaisceart Éireann]]
 [[gl:Irlanda do Norte - Northern Ireland]]
 [[he:צפון אירלנד]]
+[[hu:Észak-Írország]]
 [[id:Irlandia Utara]]
 [[it:Irlanda del Nord]]
 [[ja:北アイルランド]]
 [[ka:ჩრდილოეთი ირლანდია]]
 [[ko:북아일랜드]]
 [[kw:Kledhbarth Iwerdhon]]
+[[la:Hibernia Septentrionalis]]
+[[lt:Šiaurės Airija]]
 [[nl:Noord-Ierland]]
 [[nn:Nord-Irland]]
 [[no:Nord-Irland]]
@@ -34,4 +44,7 @@
 [[sl:Severna Irska]]
 [[sr:Северна Ирска]]
 [[sv:Nordirland]]
+[[tpi:Not Aialan]]
+[[tr:Kuzey İrlanda]]
+[[uk:Північна Ірландія]]
 [[zh:北爱尔兰]]
