--- a/Kasai_ya_Monyɛlɛ.mw
+++ b/Kasai_ya_Monyɛlɛ.mw
@@ -5,12 +5,11 @@
 {{ndambo}}
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
 
-[[de:Kasai-Oriental (1966-2006)]]
-[[sv:Kasai-Oriental]]
-[[fr:Kasai-Oriental]]
-[[en:Kasai-Oriental]]
-
-
 {{BiteniKongoKinshasa}}
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
+
+[[de:Kasai-Oriental]]
+[[en:Kasai-Oriental]]
+[[fr:Kasaï-Oriental]]
+[[sv:Kasai-Oriental]]
