robot  Ajoute: de, ko, nl, sv Modifie: en, fr

--- a/Joseph_Kasa-Vubu.mw
+++ b/Joseph_Kasa-Vubu.mw
@@ -11,5 +11,9 @@
 [[category:Moto wa politiki ya Kɔ́ngɔ Demokratiki]]
 [[Category:Tatá-mokonzi ya Kɔ́ngɔ Demokratiki]]
 
-[[en:Joseph Kasavubu]]
-[[fr:Joseph Kasavubu]]
+[[de:Joseph Kasavubu]]
+[[en:Joseph Kasa Vubu]]
+[[fr:Joseph Kasa-Vubu]]
+[[ko:조제프 카사 부부]]
+[[nl:Joseph Kasavubu]]
+[[sv:Joseph Kasavubu]]
