--- a/Lóndɛlɛ.mw
+++ b/Lóndɛlɛ.mw
@@ -8,8 +8,80 @@
 
 {{Londoni}}
 
-[[de:London]]
-[[fr:Londres]]
-[[en:London]]
-
 [[Category:Ingɛlɛ́tɛlɛ]]
+
+[[af:Londen]]
+[[als:London]]
+[[an:Londres]]
+[[ang:Lunden]]
+[[ar:لندن]]
+[[ast:Londres]]
+[[be:Лёндан]]
+[[bg:Лондон]]
+[[br:Londrez]]
+[[bs:London]]
+[[ca:Londres]]
+[[cs:Londýn]]
+[[cy:Llundain]]
+[[da:London]]
+[[de:London]]
+[[el:Λονδίνο]]
+[[en:London]]
+[[eo:Londono]]
+[[es:Londres]]
+[[et:London]]
+[[eu:London]]
+[[fi:Lontoo]]
+[[fiu-vro:London]]
+[[fr:Londres]]
+[[fy:Londen]]
+[[ga:Londain]]
+[[gd:Lunnainn]]
+[[gl:Londres - London]]
+[[gu:લંડન]]
+[[he:לונדון]]
+[[hi:लंदन]]
+[[hr:London]]
+[[hu:London]]
+[[ia:London]]
+[[id:London]]
+[[io:London (Anglia)]]
+[[is:London]]
+[[it:Londra]]
+[[ja:ロンドン]]
+[[ka:ლონდონი]]
+[[ko:런던]]
+[[ku:London]]
+[[kw:Loundres]]
+[[la:Londinium]]
+[[lb:London]]
+[[li:Londe]]
+[[lt:Londonas]]
+[[lv:Londona]]
+[[mk:Лондон]]
+[[ms:London]]
+[[nds:London]]
+[[nl:Londen]]
+[[nn:London]]
+[[no:London]]
+[[pl:Londyn]]
+[[pt:Londres]]
+[[ro:Londra]]
+[[ru:Лондон]]
+[[scn:Londra]]
+[[sco:Lunnon]]
+[[sh:London]]
+[[simple:London]]
+[[sk:Londýn]]
+[[sl:London]]
+[[sr:Лондон]]
+[[sv:London]]
+[[ta:இலண்டன்]]
+[[th:ลอนดอน]]
+[[tr:Londra]]
+[[tt:London]]
+[[uk:Лондон]]
+[[vi:Luân Đôn]]
+[[yi:לאנדאן]]
+[[zh:伦敦]]
+[[zh-min-nan:London]]
