--- a/Ngaliéma.mw
+++ b/Ngaliéma.mw
@@ -32,6 +32,7 @@ La commune accueille par ailleurs le [[palais de Marbre]], ancienne résidence p
 *[http://katembo.fragland.net/gallery/cartes/PlanLeoC.jpg Carte de Léopoldville] (1960)
 *[http://home.scarlet.be/~godfr123/cartes/carte_leopoldville_1954.jpg Carte de Léopoldville] (1954)
 {{CommunesKinshasa}}
-[[fr:Ngaliema]]
-
 [[Category:Bakomini ya Kinshasa]]
+
+[[en:Ngaliema]]
+[[fr:Ngaliema]]
