robot  Ajoute: de

--- a/Kivu_ya_Nole.mw
+++ b/Kivu_ya_Nole.mw
@@ -4,6 +4,7 @@
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
 
+[[de:Nord-Kivu]]
 [[en:Nord-Kivu]]
 [[fr:Nord-Kivu]]
 [[sv:Kivu-Nord]]
