robot  Ajoute: de

--- a/Maniema.mw
+++ b/Maniema.mw
@@ -9,7 +9,7 @@
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
 
-
+[[de:Maniema]]
 [[en:Maniema]]
 [[fr:Maniema]]
 [[sv:Maniema]]
