robot  Ajoute: da, en, es, fi, id, pl, pt, ru, zh

--- a/Wikitravel.mw
+++ b/Wikitravel.mw
@@ -22,11 +22,20 @@ Wikitravel esalemi na nkotá mingi. Ekútánémi na nkóta motpba (6).  Pona kot
 [[Category:Turismɛ]]
 [[Category:masangá wiki]]
 
-[[de:Wikitravel]] 
-[[fr:Wikitravel]] 
+[[da:Wikitravel]]
+[[de:Wikitravel]]
+[[en:Wikitravel]]
+[[es:Wikitravel]]
+[[fi:Wikitravel]]
+[[fr:Wikitravel]]
 [[hu:Wikitravel]]
+[[id:Wikitravel]]
 [[it:Wikitravel]]
-[[ja:&#12454;&#12451;&#12461;&#12488;&#12521;&#12505;&#12523;]]
+[[ja:ウィキトラベル]]
 [[nl:Wikitravel]]
+[[pl:Wikitravel]]
+[[pt:Wikitravel]]
 [[ro:Wikitravel]]
+[[ru:Wikitravel]]
 [[sv:Wikitravel]]
+[[zh:Wikitravel]]
