robot  Ajoute: af, an, ast, ba, be, bg, bn, br, bs, ca, cs, cv, cy, da, de, el, eo, et, eu, fa, fi, gl, haw, he, hi, hr, hu, ia, id, ilo, io, is, it, ja, jbo, jv, ko, ku, kw, la, li, lt, lv, mk, ms, nl, nn, no, pl, ps, ro, ru, sh, simple, sk, sl, sr,

--- a/Islamu.mw
+++ b/Islamu.mw
@@ -1,8 +1,80 @@
 {{IslamS}}
 '''Islamu''' (na [[liarabi]] balobi ''Islam'' - لإسلام), to mpe '''[[Kimosulmani]]''', ezali moko okati ya barelijion misatu ya [[balandi nzambe moko]]. Lokola okati ya barelijion basusu babale - [[Boklísto]] na [[Boyúda]], [[mosulmani|bamosulmani]] (to mpe balandi Islamu) ba sambelaka nzambe oyo bato-mayele babengi '''nzambe ya Abalamu''' (''Ibrahim'' na kiarabi).
 
-[[en:Islam]][[pt:Islam]][[fr:Islam]][[sw:Uislamu]][[ar:Islam]][[es:Islam]]
-
-
 [[category:relijió]]
 [[category:islamu]]
+
+[[af:Islam]]
+[[an:Islam]]
+[[ar:إسلام]]
+[[ast:Islam]]
+[[ba:Ислам]]
+[[be:Іслам]]
+[[bg:Ислям]]
+[[bn:ইসলাম]]
+[[br:Islam]]
+[[bs:Islam]]
+[[ca:Islam]]
+[[cs:Islám]]
+[[cv:Ислам]]
+[[cy:Islam]]
+[[da:Islam]]
+[[de:Islam]]
+[[el:Ισλαμισμός]]
+[[en:Islam]]
+[[eo:Islamo]]
+[[es:Islam]]
+[[et:Islam]]
+[[eu:Islam]]
+[[fa:اسلام]]
+[[fi:Islam]]
+[[fr:Islam]]
+[[gl:Islam]]
+[[haw:Hoʻomana Mohameka]]
+[[he:אסלאם]]
+[[hi:इस्लाम धर्म]]
+[[hr:Islam]]
+[[hu:Iszlám]]
+[[ia:Islam]]
+[[id:Islam]]
+[[ilo:Islam]]
+[[io:Islamo]]
+[[is:Íslam]]
+[[it:Islam]]
+[[ja:イスラム教]]
+[[jbo:musyjda]]
+[[jv:Islam]]
+[[ko:이슬람교]]
+[[ku:Îslam]]
+[[kw:Islam]]
+[[la:Religio Islamica]]
+[[li:Islam]]
+[[lt:Islamas]]
+[[lv:Islāms]]
+[[mk:Ислам]]
+[[ms:Islam]]
+[[nl:Islam]]
+[[nn:Islam]]
+[[no:Islam]]
+[[pl:Islam]]
+[[ps:اسلام]]
+[[pt:Islão]]
+[[ro:Islam]]
+[[ru:Ислам]]
+[[sh:Islam]]
+[[simple:Islam]]
+[[sk:Islam]]
+[[sl:Islam]]
+[[sr:Ислам]]
+[[su:Islam]]
+[[sv:Islam]]
+[[sw:Uislamu]]
+[[ta:இஸ்லாம்]]
+[[th:ศาสนาอิสลาม]]
+[[tr:İslam]]
+[[tt:Íslam]]
+[[uk:Іслам]]
+[[ur:اسلام]]
+[[vi:Hồi giáo]]
+[[yi:איסלאם]]
+[[zh:伊斯兰教]]
