robot  Ajoute: ca, de, nn, pt, ru, zh Modifie: en, fi, pl

--- a/Léopold_II.mw
+++ b/Léopold_II.mw
@@ -1,25 +1,21 @@
 {{ndámbo}}
 [[Image:LeopoldIIBelgien.jpg]]
 
-
-
-
-
-
-
-
-
-
-
 [[bg:Леополд II (Белгия)]]
-[[en:Léopold II of Belgium]]
+[[ca:Leopold II de Bèlgica]]
+[[de:Leopold II. (Belgien)]]
+[[en:Leopold II of Belgium]]
 [[eo:Leopoldo la 2-a (Belgio)]]
 [[es:Leopoldo II de Bélgica]]
-[[fi:Belgian Leopold II]]
+[[fi:Leopold II (Belgia)]]
 [[fr:Léopold II de Belgique]]
 [[it:Leopoldo II del Belgio]]
 [[ja:レオポルド2世 (ベルギー王)]]
 [[nl:Leopold II van België]]
+[[nn:Leopold II av Belgia]]
 [[no:Leopold II av Belgia]]
-[[pl:Leopold II (król Belgii)]]
+[[pl:Leopold II Koburg]]
+[[pt:Leopoldo II da Bélgica]]
+[[ru:Леопольд II (король Бельгии)]]
 [[sv:Leopold II av Belgien]]
+[[zh:利奥波德二世 (比利时)]]
