robot  Ajoute: de, fi, gl, ko Modifie: en

--- a/Katanga.mw
+++ b/Katanga.mw
@@ -10,9 +10,13 @@
 
 {{BiteniKongoKinshasa}}
 
-[[en:Katanga]]
+[[de:Katanga]]
+[[en:Katanga Province]]
 [[es:Katanga]]
+[[fi:Katanga]]
 [[fr:Katanga]]
+[[gl:Katanga]]
+[[ko:카탕가 주]]
 [[nl:Katanga]]
 [[pl:Katanga]]
 [[sv:Katanga]]
