robot  Ajoute: de Modifie: fr

--- a/Etúká_ya_Monyɛlɛ.mw
+++ b/Etúká_ya_Monyɛlɛ.mw
@@ -3,6 +3,7 @@
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
 
+[[de:Orientale]]
 [[en:Orientale, Congo]]
-[[fr:Orientale]]
+[[fr:Province Orientale en République démocratique du Congo]]
 [[sv:Orientale]]
