--- a/Mobutu_Sese_Seko.mw
+++ b/Mobutu_Sese_Seko.mw
@@ -11,11 +11,15 @@
 [[en:Mobutu Sese Seko]]
 [[es:Mobutu Sese Seko]]
 [[fi:Mobutu Sese Seko]]
+[[fr:Mobutu Sese Seko]]
 [[gl:Mobutu Sese Seko]]
 [[id:Mobutu Sese Seko]]
 [[it:Mobutu Sese Seko]]
 [[ja:モブツ・セセ・セコ]]
+[[ko:세세 세코]]
 [[lt:Mobutu Sésé Seko]]
 [[nl:Mobutu Sese Seko]]
 [[pl:Mobutu Sese Seko]]
+[[ro:Mobutu Sese Seko]]
+[[ru:Мобуту Сесе Секо]]
 [[sv:Mobutu Sese Seko]]
