robot  Ajoute: de, en, sv Modifie: nl

--- a/Kɔ́ngɔ_belji.mw
+++ b/Kɔ́ngɔ_belji.mw
@@ -10,8 +10,11 @@
 [[Category:Historia ya Afrika]]
 [[Category:Kɔ́ngɔ-Kinshasa]]
 
-[[bg:&#1041;&#1077;&#1083;&#1075;&#1080;&#1081;&#1089;&#1082;&#1086; &#1050;&#1086;&#1085;&#1075;&#1086;]]
+[[bg:Белгийско Конго]]
+[[de:Geschichte der Demokratischen Republik Kongo#Belgisch-Kongo]]
+[[en:Belgian Congo]]
 [[es:Congo Belga]]
 [[fr:Congo belge]]
-[[nl: Belgisch Congo]]
+[[nl:Belgisch Kongo]]
 [[pl:Kongo Belgijskie]]
+[[sv:Belgiska Kongo]]
