robot  Ajoute: de

--- a/Kivu_ya_Sidi.mw
+++ b/Kivu_ya_Sidi.mw
@@ -3,6 +3,7 @@
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
 
+[[de:Sud-Kivu]]
 [[en:Sud-Kivu]]
 [[fr:Sud-Kivu]]
 [[sv:Kivu-Sud]]
