robot  Ajoute: fr, he, ro, sr Modifie: en

--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -500,9 +500,13 @@ __NOTOC__
 
 [[Category:Almwali]]
 
-[[en:List of national coats of arms]]
+[[en:Gallery of sovereign state coats of arms]]
+[[fr:Galerie des emblèmes des pays du monde]]
+[[he:גלריית סמלי מדינות העולם]]
 [[it:Elenco di stemmi nazionali]]
 [[nl:Wapenschilden van de wereld]]
-[[pl:God&#322;a pa&#324;stw &#347;wiata]]
-[[sk:Gal&#233;ria &#353;t&#225;tnych znakov]]
+[[pl:Godła państw świata]]
+[[ro:Galerie de steme de state suverane]]
+[[sk:Galéria štátnych znakov]]
+[[sr:Списак државних грбова]]
 [[sv:Lista över riksvapen]]
