robot  Ajoute: id Modifie: en, fr

--- a/Tatá-mokonzi_ya_Kɔ́ngɔ_Demokratiki.mw
+++ b/Tatá-mokonzi_ya_Kɔ́ngɔ_Demokratiki.mw
@@ -1,5 +1,3 @@
-[[en:Heads of State of the Democratic Republic of the Congo]]
-[[fr:Présidents_de_la_République_démocratique_du_Congo]]
 [[Category:Tatá-mokonzi ya Kɔ́ngɔ Demokratiki]]
 [[Category:Moto wa politiki ya Kɔ́ngɔ Demokratiki]]
 
@@ -39,3 +37,7 @@ Mabomí óyo elandi elakisi liste ya bakambi-mboka óyo balandanaki o ekólo óy
 |}
 
 {{PartiPolitiqueRDC}}
+
+[[en:Heads of state of the Democratic Republic of the Congo]]
+[[fr:Liste des présidents de la République démocratique du Congo]]
+[[id:Presiden Republik Demokratik Kongo]]
