robot  Ajoute: id Modifie: en, fr

--- a/Bakambi-ekólo_ba_Kongó-Kinsásá.mw
+++ b/Bakambi-ekólo_ba_Kongó-Kinsásá.mw
@@ -56,5 +56,6 @@ Mabomí óyo elandi elakisi liste ya '''bakambi-mboka''' óyo balandanaki o ekó
 [[Category:Politiki bya Kɔ́ngɔ-Kinshasa]]
 [[category:Moto wa politiki ya Kɔ́ngɔ Demokratiki]]
 
-[[fr:Présidents de la République démocratique du Congo]]
-[[en:Heads of State of the Democratic Republic of the Congo]]
+[[en:Heads of state of the Democratic Republic of the Congo]]
+[[fr:Liste des présidents de la République démocratique du Congo]]
+[[id:Presiden Republik Demokratik Kongo]]
