--- a/Ndáko_ya_bokɔnɔ.mw
+++ b/Ndáko_ya_bokɔnɔ.mw
@@ -3,15 +3,29 @@
 Soki biloko ya [[doktolo]] ezali kobikisa yo te, to ozali na posa ya biloko eleki ye, sikoyo ye moko akopesa yo mokanda okende na '''lopital'''. Okoki te kokende mpo olingi, ye doktolo nayo moko kaka akotinda yo.
 
 
+[[Category:Móngana]]
+[[Category:Nzoto kolongono]]
+
 [[cs:Nemocnice]]
 [[da:Hospital]]
 [[de:Krankenhaus]]
 [[el:Νοσοκομείο]]
+[[en:Hospital]]
+[[eo:Malsanulejo]]
 [[es:Hospital]]
+[[fi:Sairaala]]
 [[fr:Centre hospitalier]]
-[[id:Rumah sakit]]
 [[he:בית חולים]]
+[[id:Rumah sakit]]
+[[it:Ospedale]]
+[[ja:病院]]
+[[ko:병원]]
 [[nl:Ziekenhuis]]
-
-[[Category:Móngana]]
-[[Category:Nzoto kolongono]]
+[[nn:Sjukehus]]
+[[no:Sykehus]]
+[[pl:Szpital]]
+[[pt:Hospital]]
+[[simple:Hospital]]
+[[sl:Bolnišnica]]
+[[sv:Sjukhus]]
+[[zh:醫院]]
