robot  Ajoute: bg, bs, ca, cs, da, eo, es, et, eu, gl, he, hr, hu, id, it, ja, ko, nds, nl, no, pl, pt, ro, sh, sr, sv, th, uk

--- a/Mángolá.mw
+++ b/Mángolá.mw
@@ -2,6 +2,35 @@
 {{ndámbo}}
 [[category:Esálela]]
 [[category:Bongana masíni]]
+
+[[bg:Компютърна клавиатура]]
+[[bs:Tastatura]]
+[[ca:Teclat]]
+[[cs:Počítačová klávesnice]]
+[[da:Tastatur]]
 [[de:Tastatur]]
 [[en:Computer keyboard]]
+[[eo:Klavaro]]
+[[es:Teclado de ordenador]]
+[[et:Sõrmistik]]
+[[eu:Teklatu (ordenagailua)]]
 [[fr:Clavier informatique]]
+[[gl:Teclado]]
+[[he:מקלדת מחשב]]
+[[hr:Tipkovnica]]
+[[hu:Billentyűzet]]
+[[id:Keyboard]]
+[[it:Tastiera (informatica)]]
+[[ja:キーボード]]
+[[ko:컴퓨터 자판]]
+[[nds:Tastatur]]
+[[nl:Toetsenbord]]
+[[no:Tastatur]]
+[[pl:Klawiatura]]
+[[pt:Teclado (computador)]]
+[[ro:Tastatură]]
+[[sh:Tastatura]]
+[[sr:Тастатура]]
+[[sv:Tangentbord]]
+[[th:คีย์บอร์ด (คอมพิวเตอร์)]]
+[[uk:Клавіатура]]
