--- a/Demokrasi.mw
+++ b/Demokrasi.mw
@@ -11,4 +11,52 @@ Demokrasi ezalí bobɛ́lɛ́ loléngé ya koyángela tɛ́, kasi mpé mabɔngí
 * [[Politiki]]
 * [[Lisakoli_ya_molongo_ya_makoki_ya_moto]]
 
+[[af:Demokrasie]]
+[[ar:ديمقراطية]]
+[[bg:Демокрация]]
+[[bn:গণতন্ত্র]]
+[[bs:Demokracija]]
+[[ca:Democràcia]]
+[[cs:Demokracie]]
+[[da:Demokrati]]
+[[de:Demokratie]]
+[[en:Democracy]]
+[[eo:Demokratio]]
+[[es:Democracia]]
+[[et:Demokraatia]]
+[[fa:دموکراسی]]
+[[fi:Demokratia]]
 [[fr:Démocratie]]
+[[gl:Democracia]]
+[[he:דמוקרטיה]]
+[[hr:Demokracija]]
+[[ht:Demokrasi]]
+[[hu:Demokrácia]]
+[[id:Demokrasi]]
+[[it:Democrazia]]
+[[ja:民主主義]]
+[[ka:დემოკრატია]]
+[[ki:Ndemookirathĩ]]
+[[ko:민주주의]]
+[[ku:Demokrasî]]
+[[lt:Demokratija]]
+[[mk:Демократија]]
+[[mr:लोकशाही]]
+[[nl:Democratie]]
+[[nn:Folkestyre]]
+[[no:Demokrati]]
+[[pl:Demokracja]]
+[[pt:Democracia]]
+[[ru:Демократия]]
+[[scn:Dimucrazzìa]]
+[[sh:Demokracija]]
+[[simple:Democracy]]
+[[sk:Demokracia]]
+[[sl:Demokracija]]
+[[sv:Demokrati]]
+[[th:ประชาธิปไตย]]
+[[tr:Demokrasi]]
+[[uk:Демократія]]
+[[vi:Dân chủ]]
+[[yi:דעמאקראטיע]]
+[[zh:民主]]
