robot  Ajoute: ar, eu, fa, fr, fy, ku, lb, nrm, th, tr, uk

--- a/Ekósi.mw
+++ b/Ekósi.mw
@@ -4,6 +4,7 @@
 
 [[als:Schottland]]
 [[ang:Scotland]]
+[[ar:أسكتلندا]]
 [[ast:Escocia]]
 [[bg:Шотландия]]
 [[ca:Escòcia]]
@@ -16,8 +17,12 @@
 [[eo:Skotlando]]
 [[es:Escocia]]
 [[et:Šotimaa]]
+[[eu:Eskozia]]
+[[fa:اسکاتلند]]
 [[fi:Skotlanti]]
 [[fo:Skotland]]
+[[fr:Écosse]]
+[[fy:Skotlân]]
 [[ga:Albain]]
 [[gd:Alba]]
 [[gl:Escocia - Alba]]
@@ -29,14 +34,17 @@
 [[ja:スコットランド]]
 [[ka:შოტლანდია]]
 [[ko:스코틀랜드]]
+[[ku:Îskoçya]]
 [[kw:Alban]]
 [[la:Scotia]]
+[[lb:Schottland]]
 [[li:Sjotland]]
 [[lt:Škotija]]
 [[ms:Scotland]]
 [[nl:Schotland]]
 [[nn:Skottland]]
 [[no:Skottland]]
+[[nrm:Êcosse]]
 [[pl:Szkocja]]
 [[pt:Escócia]]
 [[rm:Scozia]]
@@ -48,4 +56,7 @@
 [[sl:Škotska]]
 [[sr:Шкотска]]
 [[sv:Skottland]]
+[[th:สก็อตแลนด์]]
+[[tr:İskoçya]]
+[[uk:Шотландія]]
 [[zh:蘇格蘭]]
