robot  Ajoute: ar, bg, ca, fr, he, it, pl, simple, sr, ta, zh, zh-min-nan Modifie: eo, nl

--- a/Língoló.mw
+++ b/Língoló.mw
@@ -21,15 +21,27 @@
 
 [[Category:Mbuma]]
 
-[[en:Mango]] 
+[[ar:مانجو]]
+[[bg:Манго]]
+[[ca:Mango]]
 [[da:Mango]]
 [[de:Mango]]
+[[en:Mango]]
+[[eo:Mango (frukto)]]
 [[es:Mango]]
-[[eo:Mangujo]]
-[[ms:Mangga]]
-[[nl:Mango (vrucht)]]
-[[ja:マンゴー]]
-[[no:Mango]]
-[[pt:Manga (fruta)]]
 [[fi:Mango]]
+[[fr:Manguier]]
+[[he:מנגו]]
+[[it:Mango (frutto)]]
+[[ja:マンゴー]]
+[[ms:Mangga]]
+[[nl:Mango (geslacht)]]
+[[no:Mango]]
+[[pl:Mango]]
+[[pt:Manga (fruta)]]
+[[simple:Mango]]
+[[sr:Манго]]
 [[sv:Mango]]
+[[ta:மாம்பழம்]]
+[[zh:芒果]]
+[[zh-min-nan:Sōaiⁿ-á]]
