--- a/Kominisimɛ.mw
+++ b/Kominisimɛ.mw
@@ -5,5 +5,56 @@
 
 '''Komynisimɛ''' ezalí [[politiki]] ékosenga bokulaka mpe matomba ya mosala mázala mpɔ na bolamu ya lingomba, kasi ékopekisa bokulaka ya moto mɔkɔ.
 
+[[ar:شيوعية]]
+[[be:Камунізм]]
+[[bg:Комунизъм]]
+[[bs:Komunizam]]
+[[ca:Comunisme]]
+[[cs:Komunismus]]
+[[da:Kommunisme]]
 [[de:Kommunismus]]
-[[fr:communisme]]
+[[el:Κομμουνισμός]]
+[[en:Communism]]
+[[eo:Komunismo]]
+[[es:Comunismo]]
+[[et:Kommunism]]
+[[eu:Komunismo]]
+[[fa:کمونیسم]]
+[[fi:Kommunismi]]
+[[fr:Communisme]]
+[[ga:Cumannachas]]
+[[gl:Comunismo (política)]]
+[[he:קומוניזם]]
+[[hr:Komunizam]]
+[[hu:Kommunizmus]]
+[[id:Komunisme]]
+[[io:Komunismo]]
+[[it:Comunismo]]
+[[ja:共産主義]]
+[[ko:공산주의]]
+[[lb:Kommunismus]]
+[[lt:Komunizmas]]
+[[mk:Комунизам]]
+[[ms:Komunisme]]
+[[nds:Kommunismus]]
+[[nl:Communisme]]
+[[nn:Kommunisme]]
+[[no:Kommunisme]]
+[[pl:Komunizm]]
+[[pt:Comunismo]]
+[[ro:Comunism]]
+[[ru:Коммунизм]]
+[[scn:Cumunismu]]
+[[sh:Komunizam]]
+[[simple:Communism]]
+[[sk:Komunizmus]]
+[[sl:Komunizem]]
+[[sr:Комунизам]]
+[[sv:Kommunism]]
+[[ta:பொதுவுடமை]]
+[[th:ลัทธิคอมมิวนิสต์]]
+[[tr:Komünizm]]
+[[uk:Комунізм]]
+[[vi:Chủ nghĩa cộng sản]]
+[[zh:共产主义]]
+[[zh-min-nan:Kiōng-sán-chú-gī]]
