robot  Ajoute: bn, eu, lb, oc, pam, ps Modifie: ar, eo, jbo

--- a/George_Walker_Bush.mw
+++ b/George_Walker_Bush.mw
@@ -9,9 +9,10 @@
 {{ndámbo}}
 
 [[ang:George W. Bush]]
-[[ar:جورج و. بوش]]
+[[ar:جورج دبليو بوش]]
 [[ast:George Walker Bush]]
 [[bg:Джордж У. Буш]]
+[[bn:জর্জ ডব্লিউ বুশ]]
 [[bs:George W. Bush]]
 [[ca:George Walker Bush]]
 [[cs:George W. Bush]]
@@ -19,9 +20,10 @@
 [[da:George W. Bush]]
 [[de:George W. Bush]]
 [[en:George W. Bush]]
-[[eo:George W. BUSH]]
+[[eo:George W. Bush]]
 [[es:George Walker Bush]]
 [[et:George W. Bush]]
+[[eu:George Walker Bush]]
 [[fa:جرج و. بوش]]
 [[fi:George W. Bush]]
 [[fr:George W. Bush]]
@@ -35,11 +37,12 @@
 [[is:George W. Bush]]
 [[it:George W. Bush]]
 [[ja:ジョージ・ウォーカー・ブッシュ]]
-[[jbo:George W. Bush]]
+[[jbo:djordj.ualkr.buc.]]
 [[ka:ბუში, ჯორჯ უოლკერ]]
 [[kn:ಜಾರ್ಜ್ ಬುಷ್]]
 [[ko:조지 W. 부시]]
 [[la:Georgius W. Bush]]
+[[lb:George W. Bush]]
 [[li:George W. Bush]]
 [[lt:Džordžas V. Bušas]]
 [[ms:George W. Bush]]
@@ -47,7 +50,10 @@
 [[nl:George Walker Bush]]
 [[nn:George W. Bush]]
 [[no:George W. Bush]]
+[[oc:George Walker Bush]]
+[[pam:George W. Bush]]
 [[pl:George W. Bush]]
+[[ps:جورج ډبليو بوش]]
 [[pt:George W. Bush]]
 [[ro:George W. Bush]]
 [[ru:Буш, Джордж Уолкер]]
