robot  Ajoute: ja, ko, pt Modifie: en

--- a/Lingála.mw
+++ b/Lingála.mw
@@ -101,13 +101,15 @@ Comment améliorer un article sur une langue?
 [[Category:Nkotá ya Babantu]]
 [[Category:Nkotá ya Kongo Kinshasa]]
 
-
 [[als:Lingala]]
 [[am:ሊንጋላ]]
 [[de:Lingala]]
-[[en:Lingala]]
+[[en:Lingala language]]
 [[eo:Lingala]]
 [[es:Lingala]]
-[[fr:Lingala]]
-[[nl:Lingala]]
 [[fi:Lingala]]
+[[fr:Lingala]]
+[[ja:リンガラ語]]
+[[ko:링갈라어]]
+[[nl:Lingala]]
+[[pt:Lingala]]
