robot  Ajoute: am, bg, bs, hu, kg, kw, sh, simple, sw, tl, tr Modifie: gl, is, ru

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -324,10 +324,13 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 {{Bisé ya Afrika}}
 
 [[af:Demokratiese Republiek van die Kongo]]
+[[am:ኮንጎ ዲሞክራቲክ ሪፑብሊክ]]
 [[an:Republica Democratica d'o Congo]]
 [[ar:جمهورية الكونغو الديمقراطية]]
 [[ast:República Democrática del Congo]]
+[[bg:Демократична република Конго]]
 [[bn:কঙ্গো (জায়ার)]]
+[[bs:Demokratska Republika Kongo]]
 [[ca:República Democràtica del Congo]]
 [[cs:Demokratická republika Kongo]]
 [[da:Demokratiske Republik Congo]]
@@ -338,16 +341,19 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 [[et:Kongo Demokraatlik Vabariik]]
 [[fi:Kongon demokraattinen tasavalta]]
 [[fr:République démocratique du Congo]]
-[[gl:República Democrática do Congo]]
+[[gl:República Democrática do Congo - République Démocratique du Congo]]
 [[he:הרפובליקה הדמוקרטית של קונגו]]
 [[hr:Demokratska Republika Kongo]]
+[[hu:Kongói Demokratikus Köztársaság]]
 [[ia:Republica Democratic del Congo]]
 [[id:Republik Demokratik Kongo]]
 [[io:Demokratial Republiko Kongo]]
-[[is:Lýðveldið Kongó]]
+[[is:Austur-Kongó]]
 [[it:Repubblica Democratica del Congo]]
 [[ja:コンゴ民主共和国]]
+[[kg:Repubilika ya Kongo Demokratiki]]
 [[ko:콩고 민주 공화국]]
+[[kw:Repoblek Werinel Kongo]]
 [[li:Kongo (Kinshasa)]]
 [[lt:Kongo Demokratinė Respublika]]
 [[lv:Kongo DR]]
@@ -359,11 +365,16 @@ Na mboka misusu mbiye ekopesa moto bokasi na 40%.
 [[no:Den demokratiske republikken Kongo]]
 [[pl:Demokratyczna Republika Konga]]
 [[pt:República Democrática do Congo]]
-[[ru:Конго, Демократическая Республика]]
+[[ru:Демократическая Республика Конго]]
+[[sh:Demokratska Republika Kongo]]
+[[simple:Democratic Republic of the Congo]]
 [[sk:Kongo (býv. Zair)]]
 [[sl:Demokratična republika Kongo]]
 [[sq:Republika Demokratike e Kongos]]
 [[sv:Demokratiska republiken Kongo]]
+[[sw:Jamhuri ya Kidemokrasia ya Kongo]]
+[[tl:Demokratikong Republika ng Congo]]
+[[tr:Demokratik Kongo Cumhuriyeti]]
 [[uk:Конго, Демократична Республіка]]
 [[zh:刚果民主共和国]]
 [[zh-min-nan:Congo Bîn-chú Kiōng-hô-kok]]
