robot  Ajoute: da, en, gl, id, io, is, it, kg, ko, lt, nn, scn, simple, sk, zh

--- a/Kinsásá.mw
+++ b/Kinsásá.mw
@@ -49,20 +49,35 @@ Kinshasa suffered greatly due to Mobutu's excesses, mass corruption, nepotism an
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
 [[Category:Bingumba bya Kɔ́ngɔ-Kinshasa]]
 
-[[de:Kinshasa]]
-[[es:Kinshasa]]
-[[fr:Kinshasa]]
-[[he:&#1511;&#1497;&#1504;&#1513;&#1488;&#1505;&#1492;]]
-[[nl:Kinshasa]]
-[[ja:&#12461;&#12531;&#12471;&#12515;&#12469;]]
-[[no:Kinshasa]]
-[[os:&#1050;&#1080;&#1085;&#1096;&#1072;&#1089;æ]]
-[[pl:Kinszasa]]
-[[pt:Kinshasa]]
-[[ru:&#1050;&#1080;&#1085;&#1096;&#1072;&#1089;&#1072;]]
-[[fi:Kinshasa]]
-[[sv:Kinshasa]]
-
 {{ndambo}}
 {{BiteniKongoKinshasa}}
 {{CommunesKinshasa}}
+
+[[da:Kinshasa]]
+[[de:Kinshasa]]
+[[en:Kinshasa]]
+[[es:Kinshasa]]
+[[fi:Kinshasa]]
+[[fr:Kinshasa]]
+[[gl:Kinshasa]]
+[[he:קינשאסה]]
+[[id:Kinshasa]]
+[[io:Kinshasa]]
+[[is:Kinsasa]]
+[[it:Kinshasa]]
+[[ja:キンシャサ]]
+[[kg:Kinsasa]]
+[[ko:킨샤사]]
+[[lt:Kinšasa]]
+[[nl:Kinshasa]]
+[[nn:Kinshasa]]
+[[no:Kinshasa]]
+[[os:Киншасæ]]
+[[pl:Kinszasa]]
+[[pt:Kinshasa]]
+[[ru:Киншаса]]
+[[scn:Kinshasa]]
+[[simple:Kinshasa]]
+[[sk:Kinshasa]]
+[[sv:Kinshasa]]
+[[zh:金夏沙]]
