robot  Ajoute: de, fi, gl, id, ja, ko, nl, pl, sv, zh

--- a/Joseph_Kabila.mw
+++ b/Joseph_Kabila.mw
@@ -1,6 +1,5 @@
 [[category:Moto wa politiki ya Kɔ́ngɔ Demokratiki]]
 [[Category:Tatá-mokonzi ya Kɔ́ngɔ Demokratiki]]
-[[en:Joseph Kabila]][[fr:Joseph Kabila]][[es:Joseph Kabila]][[kg:Joseph Kabila]][[sw:Joseph Kabila]]
 {{ndambo}}
 [[Image:Joseph_kabila.jpg|270px|thumb|Joseph Kabila]]
 
@@ -17,3 +16,19 @@ Kabila abundaki na mapinzo ya barebɛl ya tata wa ye, nà bitumba oyo ememaki wa
 
 == Nkásá olibanda Wikipedia ==
 * [http://news.bbc.co.uk/1/hi/world/africa/country_profiles/1076399.stm BBC Country Profile]*
+
+[[de:Joseph Kabila]]
+[[en:Joseph Kabila]]
+[[es:Joseph Kabila]]
+[[fi:Joseph Kabila]]
+[[fr:Joseph Kabila]]
+[[gl:Joseph Kabila]]
+[[id:Joseph Kabila]]
+[[ja:ジョゼフ・カビラ]]
+[[kg:Joseph Kabila]]
+[[ko:조제프 카빌라]]
+[[nl:Joseph Kabila]]
+[[pl:Joseph Kabila]]
+[[sv:Joseph Kabila]]
+[[sw:Joseph Kabila]]
+[[zh:约瑟夫·卡比拉]]
