robot  Ajoute: es, he, it, ru

--- a/Patrice_Lumumba.mw
+++ b/Patrice_Lumumba.mw
@@ -9,12 +9,16 @@
 [[bg:Патрис Лумумба]]
 [[de:Patrice E. Lumumba]]
 [[en:Patrice Lumumba]]
+[[es:Patrice Lumumba]]
 [[et:Patrice Lumumba]]
 [[fr:Patrice Lumumba]]
+[[he:פטריס לומומבה]]
+[[it:Patrice Lumumba]]
 [[ja:パトリス・ルムンバ]]
-[[nb:Patrice Lumumba]]
 [[nl:Patrice Lumumba]]
+[[no:Patrice Lumumba]]
 [[pl:Patrice Lumumba]]
+[[ru:Лумумба, Патрис Эмери]]
 [[sv:Patrice Lumumba]]
 [[wa:Patrice Lumumba]]
 [[zh:卢蒙巴]]
