robot  Ajoute: ca, da, fr, hi, is, it, kw, ro, th

--- a/Molelisi.mw
+++ b/Molelisi.mw
@@ -1,3 +1,30 @@
-[[br:Kensonenn]] [[de:Konsonant]] [[en:Consonant]] [[es:Consonante]] [[eo:Konsonanto]] [[ko:닿소리]] [[io:Konsonanto]] [[id:Konsonan]] [[he:עיצור]] [[nl:Medeklinker]] [[ja:子音]] [[nb:Konsonant]] [[nn:Konsonant]] [[pl:Spółgłoska]] [[pt:Consoante]] [[fi:Konsonantti]] [[sv:Konsonant]] [[wa:Cossoune]] [[zh:辅音]] 
-
 {{ndámbo}}
+
+[[br:Kensonenn]]
+[[ca:Consonant]]
+[[da:Konsonant]]
+[[de:Konsonant]]
+[[en:Consonant]]
+[[eo:Konsonanto]]
+[[es:Consonante]]
+[[fi:Konsonantti]]
+[[fr:Consonne]]
+[[he:עיצור]]
+[[hi:व्यंजन]]
+[[id:Konsonan]]
+[[io:Konsonanto]]
+[[is:Samhljóð]]
+[[it:Consonante]]
+[[ja:子音]]
+[[ko:닿소리]]
+[[kw:Kessonenn]]
+[[nl:Medeklinker]]
+[[nn:Konsonant]]
+[[no:Konsonant]]
+[[pl:Spółgłoska]]
+[[pt:Consoante]]
+[[ro:Consoană]]
+[[sv:Konsonant]]
+[[th:พยัญชนะ]]
+[[wa:Cossoune]]
+[[zh:辅音]]
