robot  Ajoute: bg, ca, es, fa, hr, is, lt, ru, sv, sw, wa

--- a/Kongo.mw
+++ b/Kongo.mw
@@ -5,20 +5,31 @@
 * [[Kɔ́ngɔ-Kinshasa|Kɔ́ngɔ Demokratiki]] (Republiki ya Kɔ́ngɔ Demokratiki, yambo [[Zaire]], [[Kɔ́ngɔ bɛlji]] mpé [[Ekólo ya Kɔ́ngɔ ya Bonsɔ́mi]])
 * [[ebale Kɔ́ngɔ]]
 
+[[bg:Конго]]
+[[ca:Congo]]
 [[da:Congo]]
 [[de:Kongo]]
 [[en:Congo (disambiguation)]]
 [[eo:Kongo]]
+[[es:Congo]]
+[[fa:کنگو (ابهام‌زدایی)]]
 [[fr:Congo]]
 [[he:קונגו]]
+[[hr:Kongo]]
 [[id:Kongo]]
+[[is:Kongó]]
 [[it:Congo]]
 [[ja:コンゴ]]
 [[ko:콩고]]
+[[lt:Kongas]]
 [[nl:Congo]]
 [[no:Kongo]]
 [[pl:Kongo]]
 [[pt:Congo (desambiguação)]]
+[[ru:Конго]]
 [[sl:Kongo]]
+[[sv:Kongo]]
+[[sw:Kongo]]
+[[wa:Congo]]
 [[zh:刚果]]
 [[zh-min-nan:Congo]]
