robot  Ajoute: pdc

--- a/Lialémani.mw
+++ b/Lialémani.mw
@@ -57,6 +57,7 @@
 [[nn:Tysk språk]]
 [[no:Tysk språk]]
 [[oc:Alemand]]
+[[pdc:Modern Hochdeitsch]]
 [[pl:Język niemiecki]]
 [[pt:Língua alemã]]
 [[rm:Lingua tudestga]]
