robot  Ajoute: an, ast, eu, fa, hi, hr, ilo, ku, la, li, ms, scn, sh, sk, sq, ta, uk Modifie: ar, io

--- a/Falansé.mw
+++ b/Falansé.mw
@@ -10,8 +10,10 @@
 
 [[af:Franse taal]]
 [[als:Französische Sprache]]
+[[an:Idioma franzés]]
 [[ang:Frencisc sprǣc]]
-[[ar:فرنسية (لغة)]]
+[[ar:لغة فرنسية]]
+[[ast:Francés]]
 [[bg:Френски език]]
 [[bm:Faransikan]]
 [[br:Galleg]]
@@ -25,25 +27,34 @@
 [[eo:Franca lingvo]]
 [[es:Idioma francés]]
 [[et:Prantsuse keel]]
+[[eu:Frantses]]
+[[fa:زبان فرانسوی]]
 [[fi:Ranskan kieli]]
 [[fr:Français]]
 [[ga:Fraincis]]
 [[gl:Lingua francesa]]
 [[he:צרפתית]]
+[[hi:फ़्रांसिसी भाषा]]
+[[hr:Francuski jezik]]
 [[hu:Francia nyelv]]
 [[ia:Lingua francese]]
 [[id:Bahasa Perancis]]
-[[io:Franca linguo]]
+[[ilo:Pagsasao a Franses]]
+[[io:Franciana linguo]]
 [[is:Franska]]
 [[it:Lingua francese]]
 [[iu:ᐅᐃᕖᑎᑐᑦ]]
 [[ja:フランス語]]
 [[ka:ფრანგული ენა]]
 [[ko:프랑스어]]
+[[ku:Zimanê fransî]]
 [[kw:Frynkek]]
+[[la:Lingua Francogallica]]
+[[li:Frans]]
 [[lt:Prancūzų kalba]]
 [[lv:Franču valoda]]
 [[mk:Француски јазик]]
+[[ms:Bahasa Perancis]]
 [[nds:Franzöösche Spraak]]
 [[nl:Frans]]
 [[nn:Fransk språk]]
@@ -56,15 +67,21 @@
 [[ro:Limba franceză]]
 [[ru:Французский язык]]
 [[sc:Limba frantzesa]]
+[[scn:Lingua francisi]]
 [[sco:French leid]]
 [[se:Fránskkagiella]]
+[[sh:Francuski jezik]]
 [[simple:French language]]
+[[sk:Francúzština]]
 [[sl:Francoščina]]
+[[sq:Gjuha Frënge]]
 [[sr:Француски језик]]
 [[sv:Franska]]
+[[ta:பிரெஞ்சு மொழி]]
 [[th:ภาษาฝรั่งเศส]]
 [[tl:Wikang Pranses]]
 [[tr:Fransızca]]
+[[uk:Французька мова]]
 [[vi:Tiếng Pháp]]
 [[zh:法语]]
 [[zh-min-nan:Hoat-gí]]
