robot  Ajoute: af, ast, et, fur, gl, gn, hu, ja, ko, simple, sl, sq, sv, vi, zh-min-nan Modifie: ru

--- a/Lisakoli_ya_molongo_ya_makoki_ya_moto.mw
+++ b/Lisakoli_ya_molongo_ya_makoki_ya_moto.mw
@@ -136,25 +136,40 @@ Mobeko ata moko te ya Lisanga oyo ekoki kozala po na Leta, na lisanga ya bato, t
 * [[Lisánga ya Bikólo ya Molɔngɔ́]]
 * [[Politiki]]
 
+[[af:Universele Verklaring van Menseregte]]
+[[ast:Declaración Universal de los Derechos Humanos]]
 [[bm:Hadamaden josiraw dantigɛkan]]
 [[ca:Declaració Universal dels Drets Humans]]
-[[cs:Všeobecná deklarace lidských práv]] 
+[[cs:Všeobecná deklarace lidských práv]]
 [[da:Menneskerettighedserklæringen]]
-[[de:Allgemeine Erklärung der Menschenrechte]] 
-[[en:Universal Declaration of Human Rights]] 
-[[es:Declaración Universal de los Derechos Humanos]] 
+[[de:Allgemeine Erklärung der Menschenrechte]]
+[[en:Universal Declaration of Human Rights]]
 [[eo:Universala Deklaracio de Homaj Rajtoj]]
+[[es:Declaración Universal de los Derechos Humanos]]
+[[et:Inimõiguste ülddeklaratsioon]]
 [[fr:Déclaration universelle des Droits de l'Homme]]
-[[fy:Universele Ferklearring fan de Rjochten fan de Minske]] 
-[[he:ההכרזה לכל באי עולם בדבר זכויות האדם]] 
+[[fur:Declarazion universâl dai dirits dal om]]
+[[fy:Universele Ferklearring fan de Rjochten fan de Minske]]
+[[gl:Declaración Universal dos Dereitos Humanos]]
+[[gn:Tekove yvypóra kuéra maymáva derecho kuaaukaha]]
+[[he:ההכרזה לכל באי עולם בדבר זכויות האדם]]
+[[hu:Az Emberi Jogok Egyetemes Nyilatkozata]]
 [[it:Dichiarazione universale dei diritti dell'uomo]]
-[[nl:Universele Verklaring van de Rechten van de Mens]] 
+[[ja:世界人権宣言]]
+[[ko:세계인권선언]]
+[[nl:Universele Verklaring van de Rechten van de Mens]]
 [[nn:Menneskerettsfråsegna]]
-[[no:Menneskerettighetserklæringen]] 
-[[pl:Powszechna Deklaracja Praw Człowieka]] 
-[[pt:Declaração Universal dos Direitos Humanos]] 
-[[ro:Declaraţia Universală a Drepturilor Omului]] 
-[[ru:Декларация прав человека]] 
+[[no:Menneskerettighetserklæringen]]
+[[pl:Powszechna Deklaracja Praw Człowieka]]
+[[pt:Declaração Universal dos Direitos Humanos]]
+[[ro:Declaraţia Universală a Drepturilor Omului]]
+[[ru:Всеобщая декларация прав человека]]
 [[sc:Decraratzione Universale de sos Deretos de s'Òmine]]
+[[simple:Universal Declaration of Human Rights]]
 [[sk:Všeobecná deklarácia ľudských práv]]
+[[sl:Splošna deklaracija človekovih pravic]]
+[[sq:Deklarata e Përgjithshme mbi të Drejtat e Njeriut]]
+[[sv:FN:s deklaration om de mänskliga rättigheterna]]
+[[vi:Tuyên ngôn Quốc tế Nhân quyền]]
 [[zh:世界人权宣言]]
+[[zh-min-nan:Sè-kài Jîn-koân Soan-giân]]
