robot  Ajoute: de, hi, la, ms

--- a/Liébeleo.mw
+++ b/Liébeleo.mw
@@ -17,6 +17,7 @@
 [[cs:Hebrejština]]
 [[cy:Hebraeg]]
 [[da:Hebraisk (sprog)]]
+[[de:Hebräische Sprache]]
 [[el:Εβραϊκή γλώσσα]]
 [[en:Hebrew language]]
 [[eo:Hebrea lingvo]]
@@ -27,6 +28,7 @@
 [[fr:Hébreu]]
 [[gl:Lingua hebrea]]
 [[he:עברית]]
+[[hi:इब्रानी]]
 [[hu:Ivrit nyelv]]
 [[ia:Hebreo]]
 [[id:Bahasa Ibrani]]
@@ -34,8 +36,10 @@
 [[ja:ヘブライ語]]
 [[ko:히브리어]]
 [[kw:Ebrow]]
+[[la:Lingua Hebraica]]
 [[lad:Idioma ebreo]]
 [[li:Hebreeuws]]
+[[ms:Bahasa Ibrani]]
 [[nds:Hebrääsche Spraak]]
 [[nl:Hebreeuws]]
 [[nn:Hebraisk språk]]
