robot  Ajoute: fiu-vro, gl, kw, ro, roa-rup

--- a/Moleli.mw
+++ b/Moleli.mw
@@ -1,3 +1,28 @@
 {{ndámbo}}
 
-[[fr:Voyelle]][[br:Vogalenn]] [[ca:Vocal]] [[de:Vokal]] [[en:Vowel]] [[es:Vocal]] [[eo:Vokalo]] [[ko:홀소리]] [[io:Vokalo]] [[it:Vocale]] [[he:תנועה (בלשנות)]] [[nah:Tsilinitl]] [[nl:Klinker (klank)]] [[ja:母音]] [[no:Vokal]] [[nn:Vokal]] [[pl:Samogłoska]] [[pt:Vogal]] [[fi:Vokaali]] [[sv:Vokal]] [[zh:元音]]
+[[br:Vogalenn]]
+[[ca:Vocal]]
+[[de:Vokal]]
+[[en:Vowel]]
+[[eo:Vokalo]]
+[[es:Vocal]]
+[[fi:Vokaali]]
+[[fiu-vro:Vabahelü]]
+[[fr:Voyelle]]
+[[gl:Vogal]]
+[[he:תנועה (בלשנות)]]
+[[io:Vokalo]]
+[[it:Vocale]]
+[[ja:母音]]
+[[ko:홀소리]]
+[[kw:Bogalenn]]
+[[nah:Tsilinitl]]
+[[nl:Klinker (klank)]]
+[[nn:Vokal]]
+[[no:Vokal]]
+[[pl:Samogłoska]]
+[[pt:Vogal]]
+[[ro:Vocală]]
+[[roa-rup:Vocală]]
+[[sv:Vokal]]
+[[zh:元音]]
