robot  Ajoute: nrm, rmy Modifie: tl

--- a/Mabelé.mw
+++ b/Mabelé.mw
@@ -55,9 +55,11 @@
 [[nl:Aarde (planeet)]]
 [[nn:Jorda]]
 [[no:Jorden]]
+[[nrm:Tèrre]]
 [[pam:Yatu]]
 [[pl:Ziemia]]
 [[pt:Terra]]
+[[rmy:Phuv]]
 [[ro:Pământ]]
 [[ru:Земля]]
 [[scn:Terra]]
@@ -73,7 +75,7 @@
 [[sw:Ardhi]]
 [[ta:பூமி]]
 [[th:โลก]]
-[[tl:Lupa (planeta)]]
+[[tl:Daigdig]]
 [[tr:Yer (gezegen)]]
 [[uk:Земля (планета)]]
 [[vi:Trái Đất]]
