robot  Ajoute: af, am, an, ang, ar, ast, bg, bs, ca, cs, cy, da, de, el, eo, es, et, eu, fa, fi, gl, he, hr, hu, id, io, is, it, ja, ko, ks, kw, la, lb, lt, lv, mr, ms, nds, nl, nn, no, oc, pl, pt, ro, ru, sa, sh, simple, sk, sl, sq, sr, sv, tl, tr,

--- a/Namibia.mw
+++ b/Namibia.mw
@@ -40,5 +40,66 @@ footnotes 	= |
 {{ndámbo}}
 [[Category:Afrika]]
 [[Category:Bisé ya Afrika]]
+
+[[af:Namibië]]
+[[am:ናሚቢያ]]
+[[an:Namibia]]
+[[ang:Namibia]]
+[[ar:ناميبيا]]
+[[ast:Namibia]]
+[[bg:Намибия]]
+[[bs:Namibija]]
+[[ca:Namíbia]]
+[[cs:Namibie]]
+[[cy:Namibia]]
+[[da:Namibia]]
+[[de:Namibia]]
+[[el:Ναμίμπια]]
 [[en:Namibia]]
+[[eo:Namibio]]
+[[es:Namibia]]
+[[et:Namiibia]]
+[[eu:Namibia]]
+[[fa:نامیبیا]]
+[[fi:Namibia]]
 [[fr:Namibie]]
+[[gl:Namibia]]
+[[he:נמיביה]]
+[[hr:Namibija]]
+[[hu:Namíbia]]
+[[id:Namibia]]
+[[io:Namibia]]
+[[is:Namibía]]
+[[it:Namibia]]
+[[ja:ナミビア]]
+[[ko:나미비아]]
+[[ks:नमीबिया]]
+[[kw:Namibi]]
+[[la:Namibia]]
+[[lb:Namibien]]
+[[lt:Namibija]]
+[[lv:Namībija]]
+[[mr:नामिबिया]]
+[[ms:Namibia]]
+[[nds:Namibia]]
+[[nl:Namibië]]
+[[nn:Namibia]]
+[[no:Namibia]]
+[[oc:Namibia]]
+[[pl:Namibia]]
+[[pt:Namíbia]]
+[[ro:Namibia]]
+[[ru:Намибия]]
+[[sa:नमीबिया]]
+[[sh:Namibija]]
+[[simple:Namibia]]
+[[sk:Namíbia]]
+[[sl:Namibija]]
+[[sq:Namibia]]
+[[sr:Намибија]]
+[[sv:Namibia]]
+[[tl:Namibia]]
+[[tr:Namibya]]
+[[uk:Намібія]]
+[[zh:纳米比亚]]
+[[zh-min-nan:Namibia]]
