robot  Ajoute: af, bs, en, eu, ilo, ka, nap, tr, vi, war Modifie: gl, hu, tl

--- a/Pápa_Benwa_XVI.mw
+++ b/Pápa_Benwa_XVI.mw
@@ -15,59 +15,69 @@
   deathplace = |
 }}
 
+[[af:Pous Benedictus XVI]]
 [[ar:بينيدكت السادس عشر]]
 [[ast:Benedictu XVI]]
 [[bg:Бенедикт XVI]]
-[[zh-min-nan:Benedictus 16-sè]]
+[[bs:Benedikt XVI.]]
 [[ca:Benet XVI]]
 [[cs:Benedikt XVI.]]
 [[cy:Pab Benedict XVI]]
 [[da:Pave Benedikt 16.]]
 [[de:Benedikt XVI.]]
-[[et:Benedictus XVI]]
 [[el:Πάπας Βενέδικτος ΙΣΤ']]
-[[es:Benedicto XVI]]
+[[en:Pope Benedict XVI]]
 [[eo:Benedikto la 16-a]]
+[[es:Benedicto XVI]]
+[[et:Benedictus XVI]]
+[[eu:Benedikto XVI.a]]
+[[fi:Benedictus XVI]]
 [[fo:Benadikt XVI]]
 [[fr:Benoît XVI]]
 [[fur:Pape Benedet XVI]]
 [[ga:Pápa Beinidict XVI]]
-[[gl:Benedito XVI]]
-[[ko:교황 베네딕토 16세]]
+[[gl:Bieito XVI, Papa]]
+[[he:בנדיקטוס השישה עשר]]
 [[hi:जोज़फ़ रैत्सिंगर]]
 [[hr:Benedikt XVI.]]
-[[io:Benedictus 16ma]]
+[[hu:XVI. Benedek pápa]]
 [[id:Paus Benediktus XVI]]
+[[ilo:Papa Benedicto XVI]]
+[[io:Benedictus 16ma]]
 [[is:Benedikt XVI]]
 [[it:Papa Benedetto XVI]]
-[[he:בנדיקטוס השישה עשר]]
+[[ja:ベネディクト16世 (ローマ教皇)]]
+[[ka:ბენედიქტე XVI]]
+[[ko:교황 베네딕토 16세]]
 [[la:Benedictus XVI]]
-[[lt:Benediktas XVI]]
 [[lb:Benoît XVI. (Poopst)]]
 [[li:Benedictus XVI]]
-[[hu:XVI. Benedek]]
-[[ms:Paus Benedict XVI]]
+[[lt:Benediktas XVI]]
 [[mo:Папа Бенедикт ал ⅩⅥ-ля]]
+[[ms:Paus Benedict XVI]]
+[[nap:Papa Benedetto XVI]]
 [[nl:Paus Benedictus XVI]]
-[[ja:ベネディクト16世 (ローマ教皇)]]
-[[no:Benedikt XVI]]
 [[nn:Pave Benedikt XVI]]
+[[no:Benedikt XVI]]
 [[pl:Papież Benedykt XVI]]
 [[pt:Papa Bento XVI]]
 [[ro:Papa Benedict al XVI-lea]]
 [[ru:Бенедикт XVI (Папа Римский)]]
+[[scn:Binidittu XVI]]
 [[sco:Pape Benedict XVI]]
 [[sh:Benedikt XVI]]
-[[scn:Binidittu XVI]]
 [[simple:Pope Benedict XVI]]
 [[sk:Benedikt XVI.]]
 [[sl:Papež Benedikt XVI.]]
 [[sr:Папа Бенедикт XVI]]
-[[fi:Benedictus XVI]]
 [[sv:Benedictus XVI]]
-[[tl:Papa Benito XVI]]
 [[ta:போப் பெனடிக்ட் XVI]]
 [[th:สมเด็จพระสันตะปาปาเบเนดิกต์ที่ 16]]
+[[tl:Papa Benedicto XVI]]
 [[tpi:Benedict XVI]]
+[[tr:Papa XVI. Benedikt]]
 [[uk:Бенедикт XVI]]
+[[vi:Benedict XVI]]
+[[war:Papa Benedicto XVI]]
 [[zh:本篤十六世]]
+[[zh-min-nan:Benedictus 16-sè]]
