robot  Ajoute: ang, eu, hi, ku, lmo, lv, pdc Modifie: he, scn, tl, yi

--- a/Swisi.mw
+++ b/Swisi.mw
@@ -55,9 +55,12 @@ footnotes     = |
 
 {{Bisé ya Eropa}}
 
+[[Category:Swisi]]
+
 [[af:Switserland]]
 [[als:Schweiz]]
 [[an:Suiza]]
+[[ang:Switzerland]]
 [[ar:سويسرا]]
 [[ast:Suiza]]
 [[be:Швайцарыя]]
@@ -73,6 +76,7 @@ footnotes     = |
 [[eo:Svislando]]
 [[es:Suiza]]
 [[et:Šveits]]
+[[eu:Suitza]]
 [[fi:Sveitsi]]
 [[fo:Sveis]]
 [[fr:Suisse]]
@@ -80,7 +84,8 @@ footnotes     = |
 [[ga:An Eilvéis]]
 [[gd:An Eilbheis]]
 [[gl:Suíza - Schweiz]]
-[[he:שוויץ]]
+[[he:שווייץ]]
+[[hi:स्विट्ज़रलैंड]]
 [[hr:Švicarska]]
 [[ht:Swis]]
 [[hu:Svájc]]
@@ -92,11 +97,14 @@ footnotes     = |
 [[ja:スイス]]
 [[ka:შვეიცარია]]
 [[ko:스위스]]
+[[ku:Swîsre]]
 [[kw:Swistir]]
 [[la:Helvetia]]
 [[lb:Schwäiz]]
 [[li:Zwitserland]]
+[[lmo:Svízzera]]
 [[lt:Šveicarija]]
+[[lv:Šveice]]
 [[mk:Швајцарија]]
 [[ms:Switzerland]]
 [[nap:Sguizzera]]
@@ -104,12 +112,13 @@ footnotes     = |
 [[nl:Zwitserland]]
 [[nn:Sveits]]
 [[no:Sveits]]
+[[pdc:Schweiz]]
 [[pl:Szwajcaria]]
 [[pt:Suíça]]
 [[rm:Svizra]]
 [[ro:Elveţia]]
 [[ru:Швейцария]]
-[[scn:Svizzira]]
+[[scn:Svìzzira]]
 [[simple:Switzerland]]
 [[sk:Švajčiarsko]]
 [[sl:Švica]]
@@ -117,13 +126,11 @@ footnotes     = |
 [[sr:Швајцарска]]
 [[sv:Schweiz]]
 [[th:ประเทศสวิตเซอร์แลนด์]]
-[[tl:Switserland]]
+[[tl:Switzerland]]
 [[tr:İsviçre]]
 [[uk:Швейцарія]]
 [[ur:سوئٹزرلینڈ]]
 [[vi:Thụy Sĩ]]
-[[yi:שװײץ]]
+[[yi:שווייץ]]
 [[zh:瑞士]]
 [[zh-min-nan:Sūi-se]]
-
-[[Category:Swisi]]
